force-app/main/default/objects/Case/fields/Last_Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_of_Month__c</fullName>
    <formula>IF(MONTH(Today()) = 12,
  DATE(YEAR(Today()), 12, 31),
  DATE(YEAR(Today()), MONTH(Today()) + 1, 1) - 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Day of Month</label>
    <type>Date</type>
</CustomField>