force-app/main/default/objects/Case/fields/Reason_for_Escalating__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Escalating__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for Escalating</label>
    <type>TextArea</type>
</CustomField>