force-app/main/default/objects/Case/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Games</fullName>
            </value>
            <value>
                <fullName>Hardware - Desktop</fullName>
            </value>
            <value>
                <fullName>Input Devices</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Software - Office</fullName>
            </value>
            <value>
                <fullName>Taxes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>