force-app/main/default/objects/Case/recordTypes/Billing.recordType-meta.xml
<RecordType>
    <fullName>Billing</fullName>
    <active>true</active>
    <businessProcess>Product Support and Billing</businessProcess>
    <description>Use to report customer billing issues.</description>
    <label>Billing</label>
</RecordType>