force-app/main/default/objects/Case/recordTypes/Inquiry.recordType-meta.xml
<RecordType>
    <fullName>Inquiry</fullName>
    <active>true</active>
    <businessProcess>Inquiry Process</businessProcess>
    <description>Record type for inquiries</description>
    <label>Inquiry</label>
</RecordType>