force-app/main/default/objects/Case/validationRules/Mark_as_Escalated.validationRule-meta.xml
<ValidationRule>
    <fullName>Mark_as_Escalated</fullName>
    <active>false</active>
    <errorConditionFormula>IsClosed || IsClosedOnCreate || TEXT(Priority) != &quot;High&quot;</errorConditionFormula>
    <errorDisplayField>IsEscalated</errorDisplayField>
    <errorMessage>You can only set a case as escalated if it is high priority and not closed</errorMessage>
</ValidationRule>