force-app/main/default/objects/Case/listViews/Accessor_Case.listView-meta.xml
<ListView>
    <fullName>Accessor_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Desktop</label>
    <queue>Desktop</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>