force-app/main/default/objects/Case/listViews/Office_Case.listView-meta.xml
<ListView>
    <fullName>Office_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Office</label>
    <queue>Office</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>